create github pages

--- a/page1.html
+++ b/page1.html
@@ -57,17 +57,15 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section article content9 cid-r5JfLHZkXr" id="content9-5">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section article content1 cid-r5JgDvnQKE" id="content1-6">
     
      
 
     <div class="container">
-        <div class="inner-container" style="width: 100%;">
-            <hr class="line" style="width: 24%;">
-            <div class="section-text align-center mbr-fonts-style display-7">Gemeentelijke Academie voor Beeldende en Audiovisuele Kunsten (GABAK)<div>2018-2019 / 4de graad - Liedekerke</div><div>2017-2018 / 4de graad - Liedekerke</div></div>
-            <hr class="line" style="width: 24%;">
+        <div class="media-container-row">
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">Gemeentelijke Academie voor Beeldende en Audiovisuele Kunsten (GABAK)<div>2018-2019 / 4de graad - Liedekerke</div><div>2017-2018 / 4de graad - Liedekerke</div></div>
         </div>
-        </div>
+    </div>
 </section>
 
 <section class="mbr-gallery mbr-slider-carousel cid-r5IJMsDBkB" id="gallery1-6">
