create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section article content1 cid-r5JgDvnQKE" id="content1-6">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content1 cid-r5JgDvnQKE" id="content1-6">
     
      
 
