--- a/page2.html
+++ b/page2.html
@@ -59,7 +59,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NsRtVwGVEcCWp4kUwxW6PVjHP2XjhBbczITzi4uJSAhzdV2OC6krI1tJ2IzohePbaKrdBh6wskHj7zJRk0PKOhLv2wBJot6G5ZDyUVd0hatRIP2hCi98uV5uVzAgEOrs">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yfP6rsCMymh3doGocysIld1+wx/nNdKEY8K0BdViRB6T7vbuCmQIKCTSn20X3UNmsJnAZb4sxx4/uX1J9SD9CxD8oCCKwVtI9Q7+p63jGpDpI9jmRtC7mbKFAt+8gUte">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -95,7 +95,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/j">website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
