create github pages

--- a/page4.html
+++ b/page4.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -69,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="header1 cid-r7cfoFzZs1" id="header1-7">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header1 cid-r7cfoFzZs1" id="header1-7">
 
     
 
