--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -68,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="cid-r5du0nJP3n mbr-fullscreen" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-r5du0nJP3n mbr-fullscreen" id="header2-0">
 
     
 
