--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -68,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -89,7 +88,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Hk71BMDjvnqtpEFl20j9pziDAkvJy5rwKtQ7eK7YJDxg9WC0P8yXf3Uudi0p7MNBcFC829DySMq+yL4IQ00zTLGruf4vdTQuBllkrWqWoG50kXR4H+JQ77Cmmc61Wi27">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DRIi7dfeJ/ev0z5eSzKL6fCO4eYPHJWqZyIVy8zLRWl9A5pj+ASmYvHpFRHlTRvYMXluXJShFr0wesU5lhALry2hlpsTXNaSLrALsPfQ7qa092SqDWcGGB3MOg8M44Lw">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
