create github pages

--- a/page8.html
+++ b/page8.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rnxkn1AH" id="gallery1-a">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rnxkn1AH" id="gallery1-a">
 
     
 
