--- a/page7.html
+++ b/page7.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -64,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="cid-r8rlZ3JtTr" id="image4-8">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-r8rlZ3JtTr" id="image4-8">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
