--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -64,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -85,7 +84,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OmT6FJaF73KUUE6/ni8ryCppt5qTMwc0n8wxQOQzXGP5VHG7h+ffoQ2+G4gSK3imznKope9lIcxINVnP7lXGN6JWVrnct+GpWBbo3mSetrVIe2PK3EMXlm3DKZgSdTu9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UYZPqveFe6W1iOnvU0/jdNxUaZivGdVtR21fmcKw4q6BaOkIbcB2nSpzaFKWLM4uuoIHBt/bJzpZBZ0HOaOHWH1IGGDmXwHQbTy//w+UMYOtgFVFp9BPs1+v6zgxkEB0">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
