--- a/page3.html
+++ b/page3.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -65,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="header1 cid-r7cfahRLex" id="header1-5">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="header1 cid-r7cfahRLex" id="header1-5">
 
     
 
